feat(billing): meter job.minutes and backup.gb
Record wall-clock job runtime on complete/fail/stale and backup dump size as GiB so usage export covers the v0.9 commercial envelope beyond deploy.count.

Co-authored-by: Cursor <cursoragent@cursor.com>